--- a/assets/.config/foot/foot.ini
+++ b/assets/.config/foot/foot.ini
@@ -5,6 +5,7 @@ font=JetBrainsMono Nerd Font:size=11
 
 [colors]
 # Altered srcery theme
+alpha=      0.75
 background= 000000
 foreground= fcf8f3
 regular0=   1c1b19
