--- a/assets/.config/hypr/hyprland.conf
+++ b/assets/.config/hypr/hyprland.conf
@@ -27,28 +27,57 @@ $menu = wofi --show drun
 ### AUTOSTART ###
 #################
 
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-
+exec-once = easyeffects --gapplication-service
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
-
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,10
 env = HYPRCURSOR_SIZE,10
 
+# Toolkit Backend Variables
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+env = CLUTTER_BACKEND,wayland
+
+# xdg Specifications
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+
+# QT Variables
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORMTHEME,qt6ct
+
+# hyprland-qt-support
+env = QT_QUICK_CONTROLS_STYLE,org.hyprland.style
+
+# xwayland apps scale fix 
+env = GDK_SCALE,1
+env = QT_SCALE_FACTOR,1
+
+env = MOZ_ENABLE_WAYLAND,1
+
+# Electron use wayland if possible
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+
+# Nvidia
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = NVD_BACKEND,direct
+env = GBM_BACKEND,nvidia-drm
+env = __GL_GSYNC_ALLOWED,1
+
+env = MOZ_DISABLE_RDD_SANDBOX,1
+env = EGL_PLATFORM,wayland
 
 #####################
 ### LOOK AND FEEL ###
 #####################
-
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -152,6 +181,12 @@ misc {
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
+cursor {
+  sync_gsettings_theme = true
+  no_hardware_cursors = 1
+  enable_hyprcursor = false
+}
+
 
 #############
 ### INPUT ###
@@ -203,7 +238,6 @@ bind = $mainMod, J, togglesplit, # dwindle
 # Apps
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, a, exec, easyeffects
 bind = $mainMod SHIFT, b, exec, blueman-manager
 bind = $mainMod, b, exec, /usr/bin/zen/zen
 
