Background and xwaylandvideobridge

--- a/assets/.config/hypr/hyprland.conf
+++ b/assets/.config/hypr/hyprland.conf
@@ -17,6 +17,8 @@ monitor=DP-2,2560x1440@75,-2560x0,1
 #################
 
 exec-once = easyeffects --gapplication-service
+exec-once = /usr/libexec/polkit-mate-authentication-agent-1
+exec-once = swaybg -i ~/.config/background/background.jpg -m fill
 
 source= $BasePath/config/env.conf
 source= $BasePath/config/looks.conf
@@ -46,3 +48,11 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 
 layerrule = blur, wofi 
 layerrule = ignorealpha 0, wofi 
+
+# XWayland Video Bridge specific rules for screen sharing
+windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrule = noanim, class:^(xwaylandvideobridge)$
+windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrule = noblur, class:^(xwaylandvideobridge)$
+windowrule = nofocus, class:^(xwaylandvideobridge)$
