--- a/assets/.config/hypr/hyprland.conf
+++ b/assets/.config/hypr/hyprland.conf
@@ -46,8 +46,10 @@ windowrulev2 = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-layerrule = blur, wofi 
 layerrule = ignorealpha 0, wofi 
+layerrule = ignorezero 0, wofi
+layerrule = xray 1, wofi
+
 
 # XWayland Video Bridge specific rules for screen sharing
 windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
