Added multiple addons from the Hyprland ecosystem

--- a/assets/.config/hypr/hyprland.conf
+++ b/assets/.config/hypr/hyprland.conf
@@ -1,6 +1,3 @@
-
-# source = ~/.config/hypr/myColors.conf
-
 $BasePath = $HOME/.config/hypr/
 
 ################
@@ -17,8 +14,9 @@ monitor=DP-2,2560x1440@75,-2560x0,1
 #################
 
 exec-once = easyeffects --gapplication-service
-exec-once = /usr/libexec/polkit-mate-authentication-agent-1
-exec-once = swaybg -i ~/.config/background/background.jpg -m fill
+exec-once = systemctl --user start hyprpolkitagent
+exec-once = hyprpaper 
+exec-once = hypridle
 
 source= $BasePath/config/env.conf
 source= $BasePath/config/looks.conf
@@ -36,6 +34,11 @@ source= $BasePath/config/keybinds.conf
 windowrulev2 = opacity 0.95,class:foot
 windowrulev2 = noblur on,class:*
 
+# Enable transparency on Wofi
+layerrule = ignorealpha 0, wofi 
+layerrule = ignorezero 0, wofi
+layerrule = xray 1, wofi
+
 # Easyeffects float
 windowrulev2 = float, class:easyeffects
 windowrulev2 = float, class:blueman-manager
@@ -45,10 +48,6 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-layerrule = ignorealpha 0, wofi 
-layerrule = ignorezero 0, wofi
-layerrule = xray 1, wofi
 
 
 # XWayland Video Bridge specific rules for screen sharing
