--- a/assets/.config/hypr/hyprlock.conf
+++ b/assets/.config/hypr/hyprlock.conf
@@ -2,6 +2,8 @@ $font = Jetbrains mono
 
 general {
     hide_cursor = true
+    screencopy_mode = 0
+    ignore_empty_input = true
 }
 
 animations {
@@ -15,22 +17,22 @@ animations {
 background {
     monitor =
     path = screenshot
-    blur_passes = 2
+    blur_passes = 3
 }
 
 input-field {
-    monitor =
-    size = 20%, 5%
+    monitor = 
+    size = 420px, 60px
     outline_thickness = 3
-    inner_color = rgba(0, 0, 0, 0.4)
+    inner_color = rgba(50, 50, 50, 0.4)
 
-    outer_color = rgba(0, 0, 0, 0.4)
+    outer_color = rgba(50, 50, 50, 0.5)
     check_color = rgba(15A077ee)
     fail_color = rgba(a0153eee)
 
     font_color = rgb(143, 143, 143)
     fade_on_empty = false
-    rounding = 25
+    rounding = 100
 
     font_family = $font
     placeholder_text = Password...
@@ -38,16 +40,26 @@ input-field {
 
     dots_spacing = 0.3
 
-    position = 0, -20
+    position = 0, -25
     halign = center
     valign = center
 }
 
-# TIME
 label {
     monitor =
     text = $TIME
-    font_size = 70
+    font_size = 55
+    font_family = $font
+
+    position = 0, -25
+    halign = center
+    valign = top
+}
+
+label {
+    monitor =
+    text = cmd[update:60000] date +"%A, %d %B %Y"
+    font_size = 15
     font_family = $font
 
     position = 0, -125
@@ -55,14 +67,13 @@ label {
     valign = top
 }
 
-# DATE
 label {
     monitor =
-    text = cmd[update:60000] date +"%A, %d %B %Y"
-    font_size = 20
+    text = cmd[] getent passwd "$USER" | cut -d ':' -f 5
+    font_size = 25
     font_family = $font
 
-    position = 0, -250
+    position = 0, 60
     halign = center
-    valign = top
+    valign = center
 }
