--- a/assets/.config/hypr/config/keybinds.conf
+++ b/assets/.config/hypr/config/keybinds.conf
@@ -13,6 +13,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, L, exec, hyprlock
 
 # Apps
 bind = $mainMod, T, exec, $terminal
