Swaync and som wip styling

--- a/assets/.config/hypr/hyprland.conf
+++ b/assets/.config/hypr/hyprland.conf
@@ -17,6 +17,8 @@ exec-once = easyeffects --gapplication-service
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper 
 exec-once = hypridle
+exec-once = swaync
+exec-once = swaync-client -df
 
 source= $BasePath/config/env.conf
 source= $BasePath/config/looks.conf
@@ -57,3 +59,13 @@ windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrule = noblur, class:^(xwaylandvideobridge)$
 windowrule = nofocus, class:^(xwaylandvideobridge)$
+
+# Swaync blur
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
+layerrule = xray 1, swaync-control-center
+layerrule = xray 1, swaync-notification-window
+layerrule = ignorezero, swaync-control-center
+layerrule = ignorezero, swaync-notification-window
+layerrule = ignorealpha 0.5, swaync-control-center
+layerrule = ignorealpha 0.5, swaync-notification-window
