Waybar and float for create file windows

--- a/assets/.config/hypr/hyprland.conf
+++ b/assets/.config/hypr/hyprland.conf
@@ -17,6 +17,7 @@ exec-once = easyeffects --gapplication-service
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper 
 exec-once = hypridle
+exec-once = waybar
 exec-once = swaync
 exec-once = swaync-client -df
 
@@ -41,11 +42,12 @@ layerrule = ignorealpha 0, wofi
 layerrule = ignorezero 0, wofi
 layerrule = xray 1, wofi
 
-# Easyeffects float
-windowrulev2 = float, class:easyeffects
+# Make certain apps float
+windowrulev2 = float, class:.*easyeffects,
 windowrulev2 = float, class:blueman-manager
+windowrulev2 = float, title:.*Create File.*
 
-# Ignore maximize requests from apps. You'll probably like this.
+# Ignore maximize requests from apps
 windowrulev2 = suppressevent maximize, class:.*    
 
 # Fix some dragging issues with XWayland
