--- a/assets/.config/hypr/config/keybinds.conf
+++ b/assets/.config/hypr/config/keybinds.conf
@@ -2,14 +2,14 @@
 ### KEYBINDINGS ###
 ###################
 $terminal = foot
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = pidof wofi || wofi --show drun
 
 $mainMod = SUPER
 
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -21,6 +21,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, b, exec, blueman-manager
 bind = $mainMod, b, exec, /usr/bin/zen/zen
 bind = $mainMod, a, exec, easyeffects
+bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy --trim-newline && hyprctl dispatch sendshortcut "CTRL,V,"
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
