--- a/assets/.config/hypr/config/looks.conf
+++ b/assets/.config/hypr/config/looks.conf
@@ -42,7 +42,7 @@ decoration {
         passes = 2
         noise = 0.01
         new_optimizations = true
-        xray = true
+        xray = false
         vibrancy = 0.1666
     }
 }
