NWG-display, better window/workspace cycling and hyprshot

--- a/assets/.config/hypr/config/windows.conf
+++ b/assets/.config/hypr/config/windows.conf
@@ -19,6 +19,7 @@ windowrulev2 = float, class:.*easyeffects,
 windowrulev2 = float, class:blueman-manager
 windowrulev2 = float, title:.*Create File.*
 windowrulev2 = float, class:nm-connection-editor
+windowrulev2 = float, class:nwg-displays
 
 # Ignore maximize requests from apps
 windowrulev2 = suppressevent maximize, class:.*    
