--- a/assets/.config/hypr/hyprland.conf
+++ b/assets/.config/hypr/hyprland.conf
@@ -6,8 +6,6 @@ $BasePath = $HOME/.config/hypr/
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
-monitor=DP-1,1920x1080@144,0x0,1
-monitor=DP-2,2560x1440@75,-2560x0,1   
 
 #################
 ### AUTOSTART ###
@@ -29,7 +27,8 @@ source= $BasePath/config/looks.conf
 source= $BasePath/config/input.conf
 source= $BasePath/config/keybinds.conf
 source= $BasePath/config/windows.conf
+source= $BasePath/monitors.conf
 
 # @TODO remove, temp for styling
-bind = $SUPER, R, exec, pkill waybar && hyprctl dispatch exec waybar
+bind = $SUPER, R, exec, pkill waybar && hyprctl dispatch exec waybar || hyprctl dispatch exec waybar
 bind = $SUPER + SHIFT, R, exec, pkill swaync && hyprctl dispatch exec swaync
