--- a/assets/.config/hypr/config/keybinds.conf
+++ b/assets/.config/hypr/config/keybinds.conf
@@ -8,18 +8,27 @@ $menu = pidof wofi || wofi --show drun
 $mainMod = SUPER
 
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+# Plugins
 bind = $mainMod, L, exec, hyprlock
+
+bind = $mainMod ALT, 1, exec, hyprshot -m region --clipboard-only
+bind = $mainMod ALT, 2, exec, hyprshot -m window --clipboard-only
+bind = $mainMod ALT, 3, exec, hyprshot -m output --clipboard-only
+bind = $mainMod ALT, 4, exec, hyprshot -m region
+bind = $mainMod ALT, 5, exec, hyprshot -m window
+bind = $mainMod ALT, 6, exec, hyprshot -m output
 
 # Apps
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, b, exec, blueman-manager
-bind = $mainMod, b, exec, /usr/bin/zen/zen
+bind = $mainMod, b, exec, /usr/bin/zen/zen --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = $mainMod, a, exec, easyeffects
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy --trim-newline && hyprctl dispatch sendshortcut "CTRL,V,"
 
@@ -29,7 +38,10 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
+bind = ALT, Tab, cyclenext,
+bind = ALT, Tab, bringactivetotop,
+
+# Switch workspaces with mainMod + [0-9] 
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -40,6 +52,10 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+bind = $mainMod, TAB, exec, hyprnome -c
+bind = $mainMod, mouse_up, exec, hyprnome
+bind = $mainMod, mouse_down, exec, hyprnome --previous
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -53,13 +69,11 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+bind = $mainMod SHIFT, TAB, exec, hyprnome --move -c
+
 # Special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_up, workspace, e+1
-bind = $mainMod, mouse_down, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
