--- a/assets/.config/hypr/config/env.conf
+++ b/assets/.config/hypr/config/env.conf
@@ -5,6 +5,7 @@
 
 env = XCURSOR_SIZE,10
 env = HYPRCURSOR_SIZE,10
+env = WLR_NO_HARDWARE_CURSORS,1 
 
 # Toolkit Backend Variables
 env = GDK_BACKEND,wayland,x11,*
@@ -30,10 +31,11 @@ env = GDK_SCALE,1
 env = QT_SCALE_FACTOR,1
 
 env = MOZ_ENABLE_WAYLAND,1
+env = MOZ_LOG,FFmpegVideo:5
+env = MOZ_X11_EGL,1
 
 # Electron use wayland if possible
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
-
 # Nvidia
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
