Changed Foot to Alacritty

--- a/assets/.config/hypr/config/keybinds.conf
+++ b/assets/.config/hypr/config/keybinds.conf
@@ -1,7 +1,7 @@
 ###################
 ### KEYBINDINGS ###
 ###################
-$terminal = foot
+$terminal = alacritty
 $fileManager = nautilus
 $menu = pidof wofi || wofi --show drun
 
