--- a/assets/.config/waybar/config.jsonc
+++ b/assets/.config/waybar/config.jsonc
@@ -11,7 +11,7 @@
         "on-click": "activate",
         "on-click-middle": "close",
         "ignore-list": [
-            "foot"
+            "Alacritty"
         ]
     },
     "tray": {
