--- a/assets/.config/hypr/config/keybinds.conf
+++ b/assets/.config/hypr/config/keybinds.conf
@@ -57,6 +57,9 @@ bind = $mainMod, TAB, exec, hyprnome -c
 bind = $mainMod, mouse_up, exec, hyprnome
 bind = $mainMod, mouse_down, exec, hyprnome --previous
 
+bind = $mainMod CTRL, left, movecurrentworkspacetomonitor, l
+bind = $mainMod CTRL, right, movecurrentworkspacetomonitor, r 
+
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
