Fixed some styling issues

--- a/assets/.config/waybar/config.jsonc
+++ b/assets/.config/waybar/config.jsonc
@@ -123,8 +123,8 @@
         "bat-compatibility": true,
         "format": "{capacity}%",
         "format-full": "{capacity}%",
-        "format-charging": " {capacity}%",
-        "format-plugged": " {capacity}%",
+        "format-charging": "{capacity}% ",
+        "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
         "format-tooltip": "Empty in {timeTo}\nConsumption: {power}w\nCycles: {cycles}\nHealth: {health}",
         "format-tooltip-charging": "Full in {timeTo}\nConsumption: {power}w\nCycles: {cycles}\nHealth: {health}",
